--- a/views/getting_started_en.ejs
+++ b/views/getting_started_en.ejs
@@ -24,7 +24,7 @@
 
 		One of the first things you'll want to do is:
 
-		<ol style="font-size: 16px;">
+		<ol>
 			<li>Select a map.</li>
 			<li>Copy the link by pressing this button or just copy/pasting the address url bar.</li>
 		</ol>
@@ -38,7 +38,7 @@
 		
 		After selecting a map and people have joined.
 		
-		<ol start=3 style="font-size: 16px;">
+		<ol start=3>
 			<li>List of users that have joined, click on their name to toggle their privileges (yellow means can edit, green means can edit and give permissions to other users).</li>
 			<li>Alternatively you can give everyone edit priviliges by unlocking the room.</li>
 			<li>You can now start creating or explaining your tactics with the tools here, read the tooltips.</li>
@@ -52,7 +52,7 @@
 		<p>
 		
 		After you log in a few more options appear.
-		<ol start=9 style="font-size: 16px;">
+		<ol start=9>
 			<li>This is now green, indicating you're logged in succesfully.</li>
 			<li>Clicking on this button will give you the option to name and store your tactic. You will be able to relaunch your tactic from the front page.</li>
 			<li>After you've named and stored your tactic you can store it easily under the same name with this save button.</li>
