--- a/views/getting_started_ru.ejs
+++ b/views/getting_started_ru.ejs
@@ -24,7 +24,7 @@
 
 		Первым делом:
 
-		<ol style="font-size: 16px;">
+		<ol>
 			<li>Выбирите карту.</li>
 			<li>Чтобы пригласить друзей создайте ссылку на комнату нажав на кнопку, скопируйте ссылку.</li>
 		</ol>
@@ -38,7 +38,7 @@
 		
 		После выбора карты и присоединения пользователей к комнате.
 		
-		<ol start=3 style="font-size: 16px;">
+		<ol start=3>
 			<li>Список пользователей которые присоединились. Нажмите на пользователя, чтобы переключить привилегии (желтые - могут редактировать тактику, зеленые - могут редактировать и назначать привилегии другим пользователям.</li>
 			<li>В качестве альтернативы можно дать всем пользователям возможность редактировать тактику разблокировав комнату нажав по кнопке.</li>
 			<li>Начните создавать или объяснять тактику с помощью инструментов (читайте всплывающие подсказки).</li>
@@ -52,7 +52,7 @@
 		<p>
 		
 		После того как вы вошли на сайт, появится несколько дополнительных функций
-		<ol start=9 style="font-size: 16px;">
+		<ol start=9>
 			<li>Зеленая кнопка с игровым ником, показывает что вы успешно вошли в систему.</li>
 			<li>Нажав на эту кнопку вам предоставится возможность назвать и сохранить вашу тактику. Вы сможете возобновить тактику с первой страницы.</li>
 			<li>После того, как вы назвали, и сохранили вашу тактику, можно сохранять ее легко под тем же именем с помощью этой кнопки.</li>
