- Detached draw resolution from screen resolution and introduced a DRAW_QUALITY contant. Basically I now draw things at double the resolution of the screen to improve quality at the cost of performance.

--- a/views/common_headers.ejs
+++ b/views/common_headers.ejs
@@ -53,10 +53,10 @@
 	<meta name="keywords" content="wot,world,tanks,world of tanks,blitz,world of tanks blitz,cw,clanwar,wargaming,armored,stronghold,campaign,tier,tank">
 <%}%>
 
-<meta property="og:title" content="<%=game.toUpperCase()%> tactics">
-<meta property="og:site_name" content="<%=game.toUpperCase()%>tactic">
-<meta property="og:url" content="http://<%=url.split('/')[0]%>">
-<meta property="og:description" content="A tool for <%=game.toUpperCase()%> to plan cw's, team battles or just explore, share and discuss map tactics with your friends, team, platoon or clan.">
+<meta property="og:title" content="<%=game.toUpperCase()%> Tactics">
+<meta property="og:site_name" content="<%=game.toUpperCase()%> Tactic">
+<meta property="og:url" content="http://<%=url.split('/')[0]%>/<%=game%>">
+<meta property="og:description" content="A tool for <%=game.toUpperCase()%> to plan battles, explore maps or share and discuss map tactics with your friends, team, platoon or clan.">
 <meta property="fb:app_id" content="580177672120479">
 <meta property="og:type" content="website">
 
