--- a/views/index_en.ejs
+++ b/views/index_en.ejs
@@ -124,19 +124,19 @@
 						<h2>Latest changes</h2>
 						<p>
 						<ul>
+							<li>Added the new wot minimaps as an option.
+							<li>Improved quality of things drawn by drawing at a higher resolution than the image.
+							<li>Improved the look of the website a little, will be adding a forum soon.
+							<li>Icons sort of zoom along now.
 							<li>Implemented pinch zoom, 2 finger pan and full support for the eraser tool on touch devices
-							<li>Moved to pixi v4.0.2, increased performance is definately measurable. Let me know if there are any issues though.
-							<li>Added wot Paris map + updated blitz maps
-							<li>Added 'lock camera' mode. Only available to owners (green), when selected all zoom/pan motions will be mimicked by all users in the room.
-							<li>Made drawing more efficient but mostly everything drawn zoomed in will now remain sharp after a refresh or on clients. There will be changes in scaling on existing tactics (slightly thinner/thicker lines, larger/smaller arrow). I'm confident it will be consistent from now on though.  
 						</ul> 
 						<p>On the bug hunting front:
 						<ul>
+							<li>Made zoom move in predictable steps.
 							<li>Fixed alignment issues in video replay room.
 							<li>The hand icon is no longer shown when dragging is disabled.
 							<li>Text on firefox 49.0 was bigger than it should be. It's actually a FF bug https://bugzilla.mozilla.org/show_bug.cgi?id=1306027, but I remedied it best I can.
 							<li>Some notes from older tactics dissapeared, they should be back now
-							<li>Resizing a select box was jumpy sometimes
 						</ul>
 						<p>If you find anything else, however small, that is broken, pls let me know. 
 					</div>
